# cogalpha-factor-mining

./: .gitignore  AGENTS.md  BLOCKERS.md  GITHUB_SYNC_REPORT.md  PR_READY_CHECKLIST.md  README.md  SECURITY_INCIDENT_SUMMARY.md  SECURITY_REVIEW.md  VALIDATION_REPORT.md  config.example.yaml  pyproject.toml
.github/workflows/: ci.yml
docs/: ARCHITECTURE.md  ROADMAP.md  SPEC_FROM_MANUAL.md
examples/: run_mvp.py
prompts/: agent_01_lv1_trend_phase.j2  agent_02_lv1_vol_regime.j2  agent_03_lv1_phase_shift.j2  agent_04_lv2_tail_risk.j2  agent_05_lv2_fragility.j2  agent_06_lv2_liquidity_dry.j2  agent_07_lv3_order_imbalance.j2  agent_08_lv3_volume_price_sync.j2  agent_09_lv3_turnover_anomaly.j2  agent_10_lv4_momentum.j2  agent_11_lv4_mean_reversion.j2  agent_12_lv4_vol_clustering.j2  agent_13_lv5_drawdown_geo.j2  agent_14_lv5_hurst.j2  agent_15_lv5_dfa.j2  agent_16_lv6_time_stability.j2  agent_17_lv6_adaptive_ctrl.j2  agent_18_lv6_signal_gate.j2  agent_19_lv7_candle_pattern.j2  agent_20_lv7_linear_fusion.j2  agent_21_lv7_fusion.j2
src/cogalpha/: __init__.py  cli.py  config.py
src/cogalpha/agents/: __init__.py  agent.py  prompt_renderer.py  prompt_templates.py  registry.py
src/cogalpha/data/: __init__.py  akshare_loader.py  loader.py  synthetic.py  (+1 more)
src/cogalpha_factor_mining.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_agents_registry.py  test_config.py  test_data_validator.py  test_evaluator.py  test_factor_parser.py  test_leakage_detection.py  test_llm_providers.py  test_pipeline_smoke.py  test_quality_checks.py
(+15 files in other folders)
